--- a/front/templates/main-header.html
+++ b/front/templates/main-header.html
@@ -2,53 +2,58 @@
   <div class="container">
     <div class="header__menu">
       <div class="logo-wrapper">
-        <a class="menu__logo" href="">LOGO</a>
+        <a class="menu__logo" href="/front/">LOGO</a>
       </div>
-      <nav class="menu__nav">
-        <ul class="menu__items">
-          <li class="menu__item">
-            <a class="menu__link" href="/front/">Головна</a>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link" href="/front/articles/">Статті</a>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link" href="/front/portfolio/">Роботи</a>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link" href="/front/about/">Про автора</a>
-          </li>
-        </ul>
-      </nav>
-      <div class="vertical-line"></div>
-      <div class="menu__socials">
-        <ul class="social__items">
-          <li class="social__item">
-            <a class="social-link" href="#">
-              <img class="social__image" src="dest/images/facebook-light.png" alt="social">
-            </a>
-          </li>
-          <li class="social__item">
-            <a class="social-link" href="#">
-              <img class="social__image" src="dest/images/insta-light.png" alt="social">
-            </a>
-          </li>
-          <li class="social__item">
-            <a class="social-link" href="#">
-              <img class="social__image" src="dest/images/twitter-light.png" alt="social">
-            </a>
-          </li>
-        </ul>
+      <div class="header__menu-items">
+        <nav class="menu__nav">
+          <ul class="menu__items">
+            <li class="menu__item">
+              <a class="menu__link" href="/front/">Головна</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="/front/articles/">Статті</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="/front/portfolio/">Роботи</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="/front/about/">Про автора</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="vertical-line items"></div>
+        <div class="menu__socials">
+          <ul class="social__items">
+            <li class="social__item">
+              <a class="social-link" href="#">
+                <img class="social__image" src="dest/images/facebook-light.png" alt="social">
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social-link" href="#">
+                <img class="social__image" src="dest/images/insta-light.png" alt="social">
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social-link" href="#">
+                <img class="social__image" src="dest/images/twitter-light.png" alt="social">
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="vertical-line social"></div>
+        <div class="menu__search-bar">
+          <form action="POST" class="menu__search-form">
+            <input class="menu__search-input" type="search" required>
+            <input class="menu__search-submit" type="submit" value=" ">
+          </form>
+        </div>
+        <div class="vertical-line user"></div>
+        <a class="menu__login-button menu__link" id="login" href="/front/login/"></a>
       </div>
-      <div class="vertical-line"></div>
-      <div class="menu__search-bar">
-        <form action="POST" class="menu__search-form">
-          <input class="menu__search-input" type="search" required>
-          <input class="menu__search-submit" type="submit" value=" ">
-        </form>
+      <div class="header__burger">
+        <span></span>
       </div>
-      <div class="vertical-line"></div>
-      <a class="menu__login-button menu__link" id="login" href="login"></a>
     </div>
   </div>
 </div>
