--- a/front/dest/css/main.css
+++ b/front/dest/css/main.css
@@ -20,8 +20,9 @@ body {
   width: 100%;
   min-height: 60vh;
   color: #ffffff;
-  background: url("https://www.jotform.com/blog/wp-content/uploads/2010/03/photo-1524664399170-77e7118fdb6d.jpeg") no-repeat center center/100% auto;
+  background: url(../images/background-image.png) no-repeat center center/100% auto;
   background-color: #ffffff;
+  background-size: cover;
 }
 
 .header-inner {
@@ -94,7 +95,15 @@ body {
   border-radius: 12px;
 }
 
+.header__menu-items {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
 .menu__search-input {
+  min-width: 10vw;
+  max-width: 20vw;
   height: 25px;
   padding-left: 10px;
   font-size: 18px;
@@ -105,7 +114,9 @@ body {
 }
 
 .menu__search-input:focus {
-  background-color: #dddddd;
+  width: 30vw;
+  max-width: 30vw;
+  background-color: #ffffff;
 }
 
 .menu__search-submit {
@@ -173,6 +184,140 @@ body {
   font-weight: 400;
 }
 
+@media (max-width: 1200px) {
+  .menu__socials {
+    display: none;
+  }
+  .vertical-line.social {
+    display: none;
+  }
+}
+@media (max-width: 910px) {
+  .logo-wrapper {
+    z-index: 3;
+  }
+  .header__burger {
+    position: relative;
+    z-index: 3;
+    display: block;
+    width: 30px;
+    height: 20px;
+    transition: all ease 0.3s;
+  }
+  .header__burger span {
+    position: absolute;
+    top: 9px;
+    width: 100%;
+    height: 2px;
+    background-color: #ffffff;
+    transition: all ease 0.3s;
+  }
+  .header__burger::before,
+  .header__burger::after {
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    content: "";
+    background-color: #ffffff;
+  }
+  .header__burger::before {
+    top: 0;
+    transition: all ease 0.3s;
+  }
+  .header__burger::after {
+    bottom: 0;
+    transition: all ease 0.3s;
+  }
+  .header__burger.active::before {
+    top: 9px;
+    transform: rotate(45deg);
+  }
+  .header__burger.active::after {
+    bottom: 9px;
+    transform: rotate(-45deg);
+  }
+  .header__burger.active span {
+    transform: scale(0);
+  }
+  .vertical-line.items {
+    display: none;
+  }
+  .menu__nav {
+    position: fixed;
+    top: -200%;
+    left: 0;
+    z-index: 2;
+    display: block;
+    width: 100%;
+    height: 100%;
+    padding: 80px 10px 0;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.6392156863);
+    transition: all ease 0.3s;
+  }
+  .menu__nav.active {
+    top: 0;
+  }
+  .menu__items {
+    display: block;
+  }
+  .menu__item {
+    padding-bottom: 30px;
+  }
+  .menu__link {
+    font-size: 30px;
+  }
+  .menu__login-button {
+    z-index: 3;
+    font-size: 20px;
+  }
+  .menu__search-bar {
+    z-index: 3;
+  }
+  body.lock {
+    overflow: hidden;
+  }
+}
+@media (max-width: 670px) {
+  .menu__nav {
+    padding-top: 150px;
+  }
+  .menu__search-bar {
+    position: fixed;
+    top: -200%;
+    left: 0;
+    z-index: 2;
+    display: block;
+    width: 100%;
+    height: 70px;
+    padding: 80px 10px 0;
+    overflow: auto;
+    transition: all ease 0.3s;
+  }
+  .menu__search-bar.active {
+    top: 0;
+    padding-top: 70px;
+  }
+  .menu__search-input {
+    width: 100px;
+    max-width: 400px;
+    height: 25px;
+    padding-left: 10px;
+    font-size: 18px;
+    background: rgba(0, 0, 0, 0);
+    border: 1px solid #ffffff;
+    border-radius: 12px;
+    transition: all ease 0.3s;
+  }
+  .vertical-line.user {
+    display: none;
+  }
+  .menu__search-input:focus {
+    width: 80vw;
+    max-width: 400px;
+  }
+}
 .topics {
   padding-top: 20px;
 }
@@ -317,14 +462,17 @@ body {
 
 .footer__items {
   display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
   justify-content: space-evenly;
+  padding: 0 10px;
 }
 
 .footer__page-links > ul {
-  margin-top: 10px;
   display: flex;
   flex-direction: column;
   gap: 10px;
+  margin-top: 10px;
 }
 
 .footer__page-links-header {
@@ -391,4 +539,10 @@ body {
   font-weight: 400;
   color: #ffffff;
   text-align: center;
+}
+
+@media (max-width: 458px) {
+  .footer__page-links {
+    margin-bottom: 20px;
+  }
 }
