--- a/front/dest/scss/_header.scss
+++ b/front/dest/scss/_header.scss
@@ -4,8 +4,9 @@
   justify-content: space-between;
   width: 100%;
   color: #ffffff;
-  background: url("https://www.jotform.com/blog/wp-content/uploads/2010/03/photo-1524664399170-77e7118fdb6d.jpeg") no-repeat center center / 100% auto;
+  background: url("../images/background-image.png") no-repeat center center / 100% auto;
   background-color: #ffffff;
+  background-size: cover;
 }
 
 .header-inner {
@@ -21,15 +22,27 @@
   padding-right: 10px;
   padding-left: 10px;
 }
-.logo-wrapper{
+
+.logo-wrapper {
   flex-grow: 1;
 }
+
 .menu__logo {
   font-family: "Russo One";
   font-size: 30px;
   font-weight: 400;
   color: #ffffff;
   text-decoration: none;
+}
+
+.header__menu-items {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.header__burger {
+  display: none;
 }
 
 .menu__items {
@@ -69,8 +82,8 @@
   height: 20px;
 }
 
-//search-bar
 .menu__search-bar {
+  z-index: 3;
   display: flex;
   align-items: center;
 }
@@ -81,6 +94,8 @@
 }
 
 .menu__search-input {
+  min-width: 10vw;
+  max-width: 20vw;
   height: 25px;
   padding-left: 10px;
   font-size: 18px;
@@ -112,7 +127,7 @@
 .menu__search-submit:active {
   background-size: 35px;
 }
-//end search-bar
+
 .header__content {
   display: flex;
   flex-direction: column;
@@ -152,4 +167,164 @@
 .content__date {
   font-size: 18px;
   font-weight: 400;
+}
+
+@media (max-width: 1200px) {
+  .menu__socials {
+    display: none;
+  }
+
+  .vertical-line.social {
+    display: none;
+  }
+}
+
+@media (max-width: 910px) {
+  .logo-wrapper {
+    z-index: 3;
+  }
+
+  .header__burger {
+    position: relative;
+    z-index: 3;
+    display: block;
+    width: 30px;
+    height: 20px;
+    transition: all ease .3s;
+  }
+
+  .header__burger span {
+    position: absolute;
+    top: 9px;
+    width: 100%;
+    height: 2px;
+    background-color: #ffffff;
+    transition: all ease .3s;
+  }
+
+  .header__burger::before,
+  .header__burger::after {
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    content: "";
+    background-color: #ffffff;
+  }
+
+  .header__burger::before {
+    top: 0;
+    transition: all ease .3s;
+  }
+
+  .header__burger::after {
+    bottom: 0;
+    transition: all ease .3s;
+  }
+
+  .header__burger.active{
+
+  }
+
+  .header__burger.active::before {
+    top: 9px;
+    transform: rotate(45deg);
+  }
+
+  .header__burger.active::after {
+    bottom: 9px;
+    transform: rotate(-45deg);
+  }
+
+  .header__burger.active span {
+    transform: scale(0);
+  }
+
+  .vertical-line.items {
+    display: none;
+  }
+
+  .menu__nav {
+    position: fixed;
+    top: -200%;
+    left: 0;
+    z-index: 2;
+    display: block;
+    width: 100%;
+    height: 100%;
+    padding: 80px 10px 0;
+    overflow: auto;
+    background-color: #0000007d;
+    transition: all ease .3s;
+  }
+
+  .menu__nav.active {
+    top: 0;
+  }
+
+  .menu__items {
+    display: block;
+  }
+
+  .menu__item {
+    padding-bottom: 30px;
+  }
+
+  .menu__link {
+    font-size: 30px;
+  }
+
+  .menu__login-button {
+    z-index: 3;
+    font-size: 20px;
+  }
+
+  body.lock {
+    overflow: hidden;
+  }
+}
+
+@media (max-width: 670px) {
+  .menu__nav {
+    padding-top: 150px;
+  }
+
+  .menu__search-bar {
+    position: fixed;
+    top: -200%;
+    left: 0;
+    z-index: 2;
+    display: block;
+    width: 100%;
+    height: 70px;
+    padding: 80px 10px 0;
+    overflow: auto;
+    transition: all ease .3s;
+  }
+
+  .menu__search-bar.active {
+    top: 0;
+    padding-top: 70px;
+  }
+
+  .menu__search-input {
+    width: 100px;
+    max-width: 400px;
+    height: 25px;
+    padding-left: 10px;
+    font-size: 18px;
+    background: #00000000;
+    border: 1px solid #ffffff;
+    border-radius: 12px;
+    transition: all ease .3s;
+  }
+
+  .vertical-line.user {
+    display: none;
+  }
+
+  .menu__search-input:focus {
+    width: 80vw;
+    max-width: 400px;
+  }
 }
