--- a/front/dest/scss/about.scss
+++ b/front/dest/scss/about.scss
@@ -1,6 +1,5 @@
-@import url("import.scss");
 @import 'import.scss';
-//=============header============
+
 @import '_header.scss';
 //=============header============
 
@@ -12,11 +11,6 @@ body{
 
 main{
   flex: 1 1 auto;
-}
-
-.information {
-}
-.container {
 }
 .block-header {
   margin: 40px 0 40px;
@@ -61,9 +55,6 @@ main{
   background-repeat: repeat-x;
 }
 
-.clients__header {
-
-}
 .clients__block {
   margin-bottom: 60px;
 }
@@ -110,6 +101,7 @@ main{
   text-decoration: none;
   font-size: 16px;
   color: #000;
+  font-size: 30px;
 }
 
 
