--- a/front/dest/scss/user.scss
+++ b/front/dest/scss/user.scss
@@ -1,4 +1,3 @@
-@import url("import.scss");
 @import 'import.scss';
 //=============header============
 @import '_header.scss';
@@ -13,19 +12,199 @@ body{
 main{
   flex: 1 1 auto;
 }
+.user__content{
+  padding: 60px 5px 20px 5px;
+  display: flex;
+  gap: 20px;
+}
 
 .user-information {
   display: flex;
   flex-direction: column;
+  background-color: #fff;
+  border: 1px solid #eaeaea;
+  border-radius: 6px;
+  min-width: 360px;
+  align-items: center;
+  padding: 20px 10px;
+  height: 50vh;
+  min-height: 400px;
+max-width: 500px;
+}
+
+.user-information__img {
+}
+.user-information__img img {
+  border-radius: 50%;
+  overflow: hidden;
+  object-fit: cover;
+  width: 110px;
+  height: 110px;
+  margin-top: 60px;
 }
 .user-information__name {
-  font-size: 50px
+  margin-top: 20px;
+  font-size: 24px;
+  font-weight: 700;
 }
 .user-information__email {
-  font-size: 30px
+  font-size: 16px;
+  margin-top: 15px;
 }
 .user-information__created-at {
-  font-size: 30px
+  font-size: 16px;
+  margin-top: 15px;
+}
+.user-information__name {
+}
+.user-information__email {
+}
+.user-information__created-at {
+}
+.user-works {
+  flex: 1 1 auto;
+}
+.works__choice {
+  padding: 0 10px;
+  display: flex;
+  gap: 10px;
+  border-radius: 6px;
+  background: none;
+  margin: 10px 0;
+}
+.create-work-link {
+  text-decoration: none;
+}
+.create-work-button {
+  display: block;
+  padding: 9px;
+  color: #090909;
+  border-radius: 20px;
+  font-weight: 700;
+  font-size: 14px;
+  border: none;
+  cursor: pointer;
+  background: none;
+transition:  all 0.3s ease 0s;
+  &:hover{
+    background-color: #1919192e;
+  }
+  &.active{
+    background-color: #080808;
+    color: #eaeaea;
+  }
+}
+
+.create-post-link {
+}
+.portfolio__items {
+  padding: 0 10px;
+  display: flex;
+  gap: 20px;
+  overflow: hidden;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.portfolio__item {
+  position: relative;
+  overflow: hidden;
+  height: 250px;
+  width: 250px;
+  border-radius: 6px;
+}
+
+.portfolio__item.add{
+  border: 1px solid #eaeaea;
+  border-radius: 6px;
+  background-color: #fff;
+  transition: all ease .3s;
+  &:hover{
+    background-color: rgba(27, 27, 27, 0.254);
+  }
+}
+.portfolio__link {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  border: none;
+  padding: 0;
+  background:none;
+  cursor: pointer;
+}
+.portfolio__link img {
+  width: 100%;
+  transition: 0.5s;
+  height: 100%;
+  object-fit: cover;
+}
+.item__edit{
+   position:absolute;
+   display: flex;
+   bottom: 0;
+   width: 100%;
+   gap: 10px;
+   padding: 10px 0;
+   justify-content: center;
+   background-color: #ffffff67;
+}
+.portfolio__details {
+  cursor: pointer;
+  width: 40%;
+  text-align: center;
+  transition: all ease 0.3s;
+  font-size: 16px;
+  font-weight: 700;
+  background-color:rgba(0, 0, 0, 0.463);
+  padding:10px 5px;
+  color:#fff;
+  border: none;
+  border-radius: 6px;
+  &:hover{
+    background-color: #080808df;
+  }
+
+}
+.portfolio__item:hover .portfolio__details{
+  opacity:1;
+}
+
+.portfolio__item:hover img {
+  filter: blur(1px)
+}
+
+
+
+@media (max-width: 1300px){
+  .user__content{
+    display: flex;
+    flex-direction: column;
+    padding-top: 10px;
+  }
+  .user-information{
+    min-width: 0;
+    max-width: 100%;
+    padding: 20px 10px;
+    height: 100%;
+    min-height: 0;
+  }
+  .user-information__name{
+    overflow-wrap: anywhere;
+    max-width: 70%;
+    text-align: center;
+  }
+  .user-information__email{
+    text-align: center;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    max-width: 85%;
+  }
+  .user-information__created-at{
+    max-width: 70%;
+  }
+  .user-information__img img {
+    margin-top: 10px;
+  }
 }
 //========main end========
 
