--- a/front/dest/css/add-portfolio-item.css
+++ b/front/dest/css/add-portfolio-item.css
@@ -29,6 +29,7 @@ body {
 
 .work__lable {
   font-size: 25px;
+  padding-left: 20px;
 }
 
 .work__name {
@@ -95,4 +96,21 @@ body {
   width: 49%;
   height: 300px;
   border-radius: 6px;
+}
+
+.work__image-errors {
+  margin: 10px 0 10px 20px;
+}
+
+.work__image-error {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  list-style: none;
+}
+
+.error-text {
+  font-size: 18px;
+  color: red;
+  font-style: italic;
 }
