--- a/front/dest/css/add-portfolio-item.css
+++ b/front/dest/css/add-portfolio-item.css
@@ -79,23 +79,49 @@ body {
 }
 
 .image__field.active {
-  opacity: 1;
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
+  justify-content: space-evenly;
   padding: 10px;
-  justify-content: start;
+  margin: 10px;
   overflow: hidden;
   border: 1px solid #000;
   border-radius: 6px;
-  margin: 10px;
+  opacity: 1;
 }
 
 .selected-image {
   object-fit: cover;
-  width: 49%;
   height: 300px;
   border-radius: 6px;
+  width: 100%;
+}
+.selected-image.logo {
+  border: 2px solid #03f924;
+  padding: 2px;
+  height: 295px;
+  width: 98%;
+}
+
+.delete-image {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 30px;
+  height: 30px;
+  border: none;
+  background-color: rgba(238, 238, 238, 0);
+  background-image: url(../images/remove.png);
+  background-size: 100%;
+  background-repeat: no-repeat;
+  cursor: pointer;
+}
+
+.image-container {
+  width: 49%;
+  overflow: hidden;
+  position: relative;
 }
 
 .work__image-errors {
