--- a/front/dest/css/main.css
+++ b/front/dest/css/main.css
@@ -202,6 +202,7 @@ body {
     display: block;
     width: 30px;
     height: 20px;
+    cursor: pointer;
     transition: all ease 0.3s;
   }
   .header__burger span {
