--- a/front/dest/scss/portfolio.scss
+++ b/front/dest/scss/portfolio.scss
@@ -171,6 +171,8 @@ main{
   align-self: center;
   font-weight: 700;
   color: #696969;
+  overflow-wrap: break-word;
+  max-width: 95%;
 
 }
 .popup__text {
