--- a/front/templates/main-header.html
+++ b/front/templates/main-header.html
@@ -43,9 +43,9 @@
         </div>
         <div class="vertical-line social"></div>
         <div class="menu__search-bar">
-          <form action="POST" class="menu__search-form">
+          <form class="menu__search-form">
             <input class="menu__search-input" type="search" required>
-            <input class="menu__search-submit" type="submit" value=" ">
+            <button class="menu__search-submit" type="submit" value=" "></button>
           </form>
         </div>
         <div class="vertical-line user"></div>
