--- a/front/dest/css/main.css
+++ b/front/dest/css/main.css
@@ -62,6 +62,10 @@ body {
   color: #ffffff;
   text-decoration: none;
   text-transform: capitalize;
+  max-width: 150px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .vertical-line {
@@ -91,6 +95,9 @@ body {
 }
 
 .menu__search-form {
+  display: flex;
+  align-items: center;
+  gap: 5px;
   border: none;
   border-radius: 12px;
 }
@@ -103,7 +110,7 @@ body {
 
 .menu__search-input {
   min-width: 10vw;
-  max-width: 20vw;
+  max-width: 15vw;
   height: 25px;
   padding-left: 10px;
   font-size: 18px;
@@ -114,8 +121,8 @@ body {
 }
 
 .menu__search-input:focus {
-  width: 30vw;
-  max-width: 30vw;
+  width: 20vw;
+  max-width: 20vw;
   background-color: #ffffff;
 }
 
