--- a/front/dest/css/search.css
+++ b/front/dest/css/search.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Roboto:wght@400;700&family=Russo+One&display=swap");
 body {
   width: 100%;
@@ -325,160 +324,125 @@ body {
   flex-direction: column;
 }
 
+body.lock {
+  overflow: hidden;
+}
+
 main {
   flex: 1 1 auto;
 }
 
-.articles {
-  margin: 0 10px 60px;
-}
-
-.articles__header {
-  margin: 40px 0 40px;
-  text-align: center;
-  font-size: 46px;
-  padding-bottom: 30px;
-  background-image: url(//cdn.shopify.com/s/files/1/0056/7679/3890/t/15/assets/dotted-line.png?v=2618969…);
-  background-size: 150px 5px;
-  background-position: 50.5% bottom;
-  background-repeat: no-repeat;
-}
-
-.articles__list {
+.search {
   display: flex;
   flex-direction: column;
-  gap: 30px;
-}
-
-.articles__item {
-  display: flex;
-  gap: 20px;
-  height: 300px;
-  overflow: hidden;
-  border: 1px solid #eaeaea;
-  background-color: #fff;
-  border-radius: 6px;
-}
-
-.article__image {
-  width: 50%;
-  overflow: hidden;
-  display: flex;
   justify-content: center;
-}
-
-.article__image img {
-  object-fit: cover;
-  height: 100%;
-  width: 100%;
-}
-
-.article__content {
-  display: flex;
-  flex-direction: column;
-  padding: 20px;
-  font-family: "Lora";
-}
-
-.article__author {
-  display: flex;
   align-items: center;
+}
+
+.search__header {
+  text-align: center;
+  font-size: 32px;
+  margin: 20px 0 0 0;
+}
+
+.search__form {
+  display: flex;
+  width: 75%;
   gap: 10px;
+  margin: 20px 0 0;
 }
 
-.article__author-image img {
-  border-radius: 50%;
-  height: 40px;
+.search__input {
+  width: 70%;
+  border-radius: 20px;
+  border: 1px solid #2a2a2a;
+  font-size: 24px;
+  padding: 5px 10px;
 }
 
-.article__author-content {
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
-}
-
-.article__author-name {
-  font-size: 16px;
+.search__submit-button {
+  width: 30%;
+  display: block;
+  padding: 9px;
+  color: #090909;
+  border-radius: 20px;
   font-weight: 700;
-}
-
-.article__date {
-  display: flex;
-  gap: 20px;
-}
-
-.article__date-published {
   font-size: 14px;
-}
-
-.article__time-from-published {
-  font-size: 14px;
-}
-
-.article__description {
-  flex: 1 1 auto;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-
-.article__description-header {
-  font-size: 34px;
-  font-weight: 700;
-}
-
-.article__description-content {
-  font-size: 20px;
-}
-
-.article__stats {
-  display: flex;
-  width: 100%;
-  gap: 20px;
-  font-size: 14px;
-}
-
-.article__stats-views {
-  font-size: 14px;
-}
-
-.article__coment-link {
-  text-decoration: none;
-  color: #000;
-}
-
-.article__coment-link:hover {
-  color: #2b36af;
-}
-
-.article__stats-comments {
-  font-size: 14px;
-}
-
-.article__stats-like-field {
-  flex: 1 1 auto;
-  display: flex;
-  align-items: center;
-  justify-content: end;
-}
-
-.article__like-button {
-  background: none;
   border: none;
   cursor: pointer;
-  padding: 0;
+  background: none;
+  background-color: rgba(25, 25, 25, 0.1803921569);
+  transition: all 0.3s ease 0s;
+}
+.search__submit-button:hover {
+  background-color: #000000;
+  color: #fff;
 }
 
-.article__like-button:hover {
-  opacity: 0.3;
+.response__items {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin: 20px 0;
+  align-items: center;
 }
 
-.article__stats-like-field img {
-  height: 30px;
+.user__item, .work__item {
+  padding: 10px;
+  border-radius: 6px;
+  display: flex;
+  width: 75%;
+  gap: 30px;
+  align-items: center;
+  height: 100%;
+  background-color: #fff;
 }
 
-.article__stats-likes {
-  font-size: 16px;
+.user__img, .work__img {
+  height: 70px;
+  width: 70px;
+  overflow: hidden;
+}
+.user__img > img, .work__img > img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.user__values {
+  font-size: 20px;
+  text-decoration: none;
+  color: #000;
+  display: flex;
+  gap: 20px;
+  cursor: pointer;
+}
+
+.user__name {
+  text-align: start;
+  max-width: 300px;
+  width: 300px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  line-height: normal;
+}
+
+.user__email {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  max-width: 500;
+  width: 500px;
+  text-align: start;
+  line-height: normal;
+}
+
+.work-title, .user-title {
+  margin-top: 20px;
+  font-size: 32px;
+  text-align: center;
 }
 
 .footer {
