--- a/front/dest/css/user.css
+++ b/front/dest/css/user.css
@@ -71,6 +71,10 @@ body {
   color: #ffffff;
   text-decoration: none;
   text-transform: capitalize;
+  max-width: 150px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .vertical-line {
@@ -107,7 +111,7 @@ body {
 
 .menu__search-input {
   min-width: 10vw;
-  max-width: 20vw;
+  max-width: 15vw;
   height: 25px;
   padding-left: 10px;
   font-size: 18px;
@@ -119,6 +123,8 @@ body {
 
 .menu__search-input:focus {
   background-color: #dddddd;
+  width: 20vw;
+  max-width: 20vw;
 }
 
 .menu__search-submit {
