--- a/front/dest/scss/_header.scss
+++ b/front/dest/scss/_header.scss
@@ -59,6 +59,10 @@
   color: #ffffff;
   text-decoration: none;
   text-transform: capitalize;
+  max-width: 150px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .vertical-line {
@@ -95,7 +99,7 @@
 
 .menu__search-input {
   min-width: 10vw;
-  max-width: 20vw;
+  max-width: 15vw;
   height: 25px;
   padding-left: 10px;
   font-size: 18px;
@@ -107,6 +111,8 @@
 
 .menu__search-input:focus {
   background-color: #dddddd;
+  width: 20vw;
+  max-width: 20vw;
 }
 
 .menu__search-submit {
