--- a/front/dest/scss/admin.scss
+++ b/front/dest/scss/admin.scss
@@ -233,6 +233,33 @@ width: 1%;
 .work-button {
 }
 
+.status-button{
+  width: 95%;
+    display: block;
+    margin: 5px auto;
+    border: none;
+    border-radius: 6px;
+    padding: 5px 10px;
+    cursor: pointer;
+    font-weight: 400;
+    cursor: pointer;
+    color: #fff;
+    border: 0;
+    &.visible{
+          background-color: green;
+    }
+    &.hide{
+      background-color: red;
+    }
+    &.in-proccess{
+      background-color: #cbcb00;
+    }
+    &:disabled{
+      background-color: #aaaaaa;
+      cursor: default;
+    }
+}
+
 .user-info-header{
   font-size: 24px;
   font-weight: 700;
@@ -264,6 +291,8 @@ width: 1%;
 }
 .user-info-item {
   font-size: 20px;
+  max-width: 33%;
+  overflow-wrap: break-word;
 
 }
 .login {
