--- a/front/dest/css/articles.css
+++ b/front/dest/css/articles.css
@@ -108,6 +108,9 @@ body {
 .menu__search-form {
   border: none;
   border-radius: 12px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
 .menu__search-input {
