--- a/front/dest/css/portfolio.css
+++ b/front/dest/css/portfolio.css
@@ -108,6 +108,9 @@ body {
 .menu__search-form {
   border: none;
   border-radius: 12px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
 .menu__search-input {
@@ -455,10 +458,9 @@ main {
 }
 
 .popup__content {
-  background-color: #fff;
+  background-color: #f5f5f5;
   color: #000;
-  width: 100%;
-  padding: 30px 0 0 0;
+  width: 99%;
   position: relative;
   opacity: 0;
   display: flex;
@@ -469,10 +471,61 @@ main {
   overflow: hidden;
 }
 
-.popup__content img {
+.popup__portfolio {
+  background-color: #f5f5f5;
+  color: #000;
+  width: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  overflow: hidden;
+  padding: 25px 0 0;
+}
+
+.popup__portfolio img {
   align-self: center;
   overflow: hidden;
   padding-top: 20px;
+}
+
+.popup__user {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  align-self: center;
+  width: 80%;
+  max-width: 90%;
+  overflow: hidden;
+  padding: 0 10px;
+  gap: 20px;
+  background-color: #ffffff;
+  border: 1px solid #eaeaea;
+  margin: 20px 0 0;
+}
+
+.user-field {
+  font-size: 24px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  line-height: 1.2;
+}
+
+.user__image {
+  height: 100px;
+  width: 100px;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+}
+.user__image > .user-img {
+  border-radius: 50%;
+  width: 90%;
+  height: 90%;
+  padding: 0;
+  margin: 0;
+  object-fit: cover;
 }
 
 .popup.open .popup__content {
@@ -491,12 +544,16 @@ main {
 
 .popup__title {
   font-size: 40px;
-  margin-bottom: 10px;
+  margin: 10px 0 0;
   align-self: center;
   font-weight: 700;
   color: #696969;
   overflow-wrap: break-word;
   max-width: 95%;
+}
+
+.user-title {
+  padding-top: 30px;
 }
 
 .popup__text {
@@ -505,6 +562,48 @@ main {
   align-self: center;
   color: #696969;
   max-width: 80%;
+}
+
+.likes {
+  display: flex;
+  margin: 20px 0;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  gap: 10px;
+}
+
+.like-count {
+  font-size: 32px;
+}
+
+.like-button {
+  background: none;
+  border: none;
+  width: 40px;
+  height: 40px;
+  position: relative;
+  transition: all ease 0.3s;
+}
+.like-button:hover {
+  opacity: 0.8;
+}
+.like-button:active {
+  margin: 5px 5px 0 0;
+  width: 35px;
+  height: 35px;
+  opacity: 0.5;
+}
+
+.like-img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  object-fit: cover;
+  width: 100%;
+  cursor: pointer;
+  padding: 0;
 }
 
 .pagination {
@@ -545,6 +644,19 @@ main {
     overflow: hidden;
     height: 300px;
     width: 300px;
+  }
+  .popup__user {
+    flex-direction: column;
+    width: 85%;
+  }
+  .user-field {
+    text-overflow: clip;
+    white-space: unset;
+    overflow-wrap: anywhere;
+    text-align: center;
+  }
+  .user-email {
+    margin-bottom: 20px;
   }
 }
 @media (max-width: 630px) {
