--- a/front/dest/css/user.css
+++ b/front/dest/css/user.css
@@ -107,6 +107,9 @@ body {
 .menu__search-form {
   border: none;
   border-radius: 12px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
 .menu__search-input {
