--- a/front/dest/scss/portfolio.scss
+++ b/front/dest/scss/portfolio.scss
@@ -132,10 +132,9 @@ main{
   padding: 30px 10px;
 }
 .popup__content {
-  background-color: #fff;
+  background-color: $base-color;
   color: #000;
-  width: 100%;
-  padding: 30px 0 0 0;
+  width: 99%;
   position: relative;
   opacity: 0;
   display: flex;
@@ -146,10 +145,61 @@ main{
   overflow: hidden;
 }
 
-.popup__content img{
+.popup__portfolio{
+  background-color: $base-color;
+  color: #000;
+  width: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  overflow: hidden;
+  padding: 25px 0 0;
+}
+
+.popup__portfolio img{
   align-self: center;
   overflow: hidden;
   padding-top: 20px;
+}
+
+.popup__user{
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  align-self: center;
+  width: 80%;
+  max-width: 90%;
+  overflow: hidden;
+  padding: 0 10px;
+  gap: 20px;
+  background-color: #ffffff;
+  border:  1px solid #eaeaea;
+  margin: 20px 0 0;
+}
+
+.user-field{
+  font-size: 24px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  line-height: 1.2;
+}
+
+.user__image{
+  height: 100px;
+  width: 100px;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  >.user-img{
+      border-radius: 50%;
+    width: 90%;
+    height: 90%;
+    padding: 0;
+    margin: 0;
+    object-fit: cover;
+  }
 }
 
 .popup.open .popup__content{
@@ -167,7 +217,7 @@ main{
 }
 .popup__title {
   font-size: 40px;
-  margin-bottom: 10px;
+  margin: 10px 0 0;
   align-self: center;
   font-weight: 700;
   color: #696969;
@@ -175,12 +225,56 @@ main{
   max-width: 95%;
 
 }
+
+.user-title{
+  padding-top: 30px;
+}
 .popup__text {
   margin: 50px 0 30px 0;
   font-size: 24px;
   align-self: center;
   color: #696969;
   max-width: 80%
+}
+
+
+.likes {
+  display: flex;
+  margin: 20px 0;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  gap: 10px;
+}
+.like-count {
+  font-size: 32px;
+}
+.like-button {
+  background: none;
+  border: none;
+  width: 40px;
+  height: 40px;
+  position: relative;
+  transition: all ease .3s;
+  &:hover{
+    opacity: 0.8;
+  }
+  &:active{
+    margin: 5px 5px 0 0;
+    width: 35px;
+    height: 35px;
+    opacity: .5;
+  }
+}
+.like-img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  object-fit: cover;
+  width: 100%;
+  cursor: pointer;
+  padding: 0;
 }
 //======popup end=========
 //======pagination=========
@@ -225,6 +319,22 @@ main{
     height: 300px;
     width: 300px;
   }
+
+  .popup__user{
+    flex-direction: column;
+    width: 85%;
+  }
+
+  .user-field{
+    text-overflow:clip;
+    white-space:unset;
+    overflow-wrap: anywhere;
+    text-align: center;
+  }
+  .user-email{
+    margin-bottom: 20px;
+  }
+
 }
 @media (max-width: 630px){
   .portfolio__item{
